@@ -1,1 +1,5 @@
 # PA22.23AulasEx
+
+
+Voz amiga:
+--module-path "caminho do javafx\lib" --add-modules ALL-MODULE-PATH
